feat: add GET /cities/{cityId}/riders endpoint to fetch riders of all zones of a city
