# gohostdelivery-service-app-rest/src/main/java/com/zms/gohostdeliveryservice/rest/controller/CityController.java
@@ -1,12 +1,15 @@
 package com.zms.gohostdeliveryservice.rest.controller;
 
 import com.zms.gohostdeliveryservice.application.dto.CityDto;
+import com.zms.gohostdeliveryservice.application.dto.RiderDto;
 import com.zms.gohostdeliveryservice.application.query.city.CityQueryHandler;
+import com.zms.gohostdeliveryservice.application.query.rider.RiderQueryHandler;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.UUID;
 
 @RestController
 @RequestMapping("/cities")
@@ -14,9 +17,15 @@ import java.util.List;
 public class CityController {
 
     private final CityQueryHandler cityQueryHandler;
+    private final RiderQueryHandler riderQueryHandler;
 
     @GetMapping
     public ResponseEntity<List<CityDto>> listCities() {
         return ResponseEntity.ok(cityQueryHandler.listAll());
+    }
+
+    @GetMapping("/{cityId}/riders")
+    public ResponseEntity<List<RiderDto>> getRidersByCity(@PathVariable UUID cityId) {
+        return ResponseEntity.ok(riderQueryHandler.getRidersByCity(cityId));
     }
 }
